test/statements/vass/index-variable-const-errors.good
index-variable-const-errors.chpl:23: In function 'main':
index-variable-const-errors.chpl:35: error: cannot assign to const variable
index-variable-const-errors.chpl:51: error: cannot assign to const variable
index-variable-const-errors.chpl:52: error: cannot assign to const variable
index-variable-const-errors.chpl:53: error: cannot assign to const variable
index-variable-const-errors.chpl:70: error: cannot assign to const variable
index-variable-const-errors.chpl:71: error: cannot assign to const variable
index-variable-const-errors.chpl:83: error: cannot assign to const variable
index-variable-const-errors.chpl:23: error: done
